# faasd-in-rust

./: .env  .gitignore  Cargo.toml  README.md  container_spec.json  flake.nix
.config/: hakari.toml
.github/workflows/: feishu-bot.yml  nix-github-actions.yml
app/: Cargo.toml
app/src/: handlers.rs  main.rs  types.rs
crates/app/: Cargo.toml
crates/app/src/: handlers.rs  main.rs  types.rs
crates/app/tests/: integration_test.rs
crates/cni/: Cargo.toml
crates/cni/src/: cni_network.rs  command.rs  lib.rs  netns.rs  util.rs
crates/faas-containerd/: Cargo.toml
crates/faas-containerd/src/: consts.rs  lib.rs  main.rs  systemd.rs
crates/faas-containerd/src/impls/: container.rs  error.rs  function.rs  mod.rs  namespace.rs  oci_image.rs  snapshot.rs  spec.rs  task.rs
crates/faas-containerd/src/impls/cni/: cni_impl.rs  command.rs  mod.rs  util.rs
crates/faas-containerd/src/provider/: mod.rs
crates/faas-containerd/src/provider/function/: delete.rs  deploy.rs  get.rs  list.rs  mod.rs  namespace.rs  resolve.rs  status.rs  update.rs
crates/faas-containerd/tests/: integration_test.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: lib.rs
crates/gateway/src/bootstrap/: mod.rs
crates/gateway/src/handlers/: function.rs  mod.rs  namespace.rs  proxy.rs  utils.rs
crates/gateway/src/metrics/: mod.rs
crates/gateway/src/provider/: mod.rs
crates/gateway/src/proxy/: builder.rs  mod.rs  proxy_handler.rs  test.rs
crates/gateway/src/types/: function.rs  mod.rs  namespace.rs
crates/my-workspace-hack/: Cargo.toml
crates/provider/: Cargo.toml
crates/provider/src/: consts.rs  lib.rs
crates/provider/src/auth/: mod.rs
crates/provider/src/bootstrap/: mod.rs
crates/provider/src/handlers/: delete.rs  deploy.rs  function_get.rs  function_list.rs  invoke_resolver.rs  mod.rs  namespace_list.rs  utils.rs
crates/provider/src/metrics/: mod.rs
crates/provider/src/proxy/: builder.rs  client.rs  mod.rs  proxy_handler.rs  proxy_handler_test.rs
crates/provider/src/types/: config.rs  function_deployment.rs  mod.rs
crates/service/: Cargo.toml
crates/service/src/: containerd_manager.rs  image_manager.rs  lib.rs  namespace_manager.rs  spec.rs  systemd.rs
docs/: develop.md  openapi.yaml
service/: Cargo.toml
service/src/: lib.rs  spec.rs
