[package]
name = "faas-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.5.1"
tokio = { version = "1", features = ["full"] }
service = { path = "../service" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
my-workspace-hack = { version = "0.1", path = "../my-workspace-hack" }
provider = { path = "../provider" }
dotenv = "0.15"
