[package]
name = "gateway"
edition = "2024"
version.workspace = true
authors.workspace = true

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37.0", features = ["full"] }
actix-web-httpauth = "0.6"
thiserror = "1.0"
awc = "3.6.0"
prometheus = "0.13"
base64 = "0.13"
log = "0.4.27"
my-workspace-hack = { version = "0.1", path = "../my-workspace-hack" }
url = "2.4"
derive_more = { version = "2", features = ["full"] }
tonic = "0.12"
tokio-util = "*"
http = "*"
actix-http = "*"
chrono = "0.4.41"
