[package]
name = "provider"
edition = "2024"
version.workspace = true
authors.workspace = true

[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37.0", features = ["full"] }
bollard = "0.13.0"
uuid = { version = "1.8.0", features = ["v4"] }
actix-web-httpauth = "0.6"
config = "0.11"
thiserror = "1.0"
reqwest = "0.11"
prometheus = "0.13"
tempfile = "3.2"
hyper = "0.14"
tower = "0.4"
regex = "1"
futures = "0.3"
actix-service = "2"
base64 = "0.13"
futures-util = "0.3"
service = { path = "../service" }
cni = { path = "../cni" }
async-trait = "0.1"
lazy_static = "1.4.0"
log = "0.4.27"
my-workspace-hack = { version = "0.1", path = "../my-workspace-hack" }
url = "2.4"
derive_more = { version = "2", features = ["full"] }
tonic = "0.12"
