[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
containerd-client = "0.8"
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
prost-types = "0.13.4"
oci-spec =  "0.6" 
sha2 = "0.10"
hex = "0.4"
my-workspace-hack = { version = "0.1", path = "../my-workspace-hack" }
handlebars= "4.1.0"     